--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ python-socketio==5.11.0
 Flask-SQLAlchemy==3.1.1
 Werkzeug==3.0.1
 python-dotenv==1.0.1
+gunicorn==21.2.0
 
 # Socket.IO workers (pick one in production)
 eventlet==0.33.3
