--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,4 @@ __marimo__/
 /sub_system/edge_client/temp_wav/
 /core/state_management_2/
 /debug_tools/Integration_upload/reports/
+sub_system/analysis_service/model_cache/*
