feat: Update logging configuration and enhance MongoDB connection handling; add analysis query tool

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,4 @@ __marimo__/
 /core/state_management_2/
 /debug_tools/Integration_upload/reports/
 sub_system/analysis_service/model_cache/*
+debug_tools/mongo_query_tools/output/*
