feat: Implement configuration management for edge client
- Add config_manager.py to handle loading, saving, and updating device configurations.
- Introduce EdgeClientConfig and AudioConfig data classes for structured configuration.
- Update device_config.json with new configuration structure.
- Refactor edge_client.py to utilize ConfigManager for configuration handling.
- Enhance event handling for device registration and configuration updates via SocketIO.
- Implement heartbeat mechanism to maintain connection status with the server.

--- a/sub_system/edge_client/device_config.json
+++ b/sub_system/edge_client/device_config.json
@@ -1,1 +1,15 @@
-{"device_id": "57989cd7-48ca-4c5d-8632-02f3cc29a207", "device_name": "Asus_Duo"}
+{
+  "device_id": "1189d524-4a7f-47a3-9c4b-1d9a7918d6ab",
+  "device_name": "Device_a741b2ef",
+  "server_url": "http://localhost:55103",
+  "audio_config": {
+    "default_device_index": 0,
+    "channels": 2,
+    "sample_rate": 16000,
+    "bit_depth": 32
+  },
+  "heartbeat_interval": 30,
+  "reconnect_delay": 5,
+  "max_reconnect_delay": 60,
+  "temp_wav_dir": "temp_wav"
+}
