--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -64,13 +64,13 @@ jobs:
             SHOULD_DEPLOY="true"
             if [ "$ENV_NAME" = "dev" ]; then SHOULD_DEPLOY="false"; fi
 
-            echo "✅ 符合版本格式"
+            echo "Version format matched"
             echo "   環境: $ENV_NAME"
             echo "   版本: $VERSION"
             echo "   說明: $DESC"
             echo "   部署: $SHOULD_DEPLOY"
           else
-            echo "⏭️ Commit message 不符合版本格式，跳過 CD 流程"
+            echo "Commit message does not match version format, skipping CD"
             echo "   格式應為: {env}_v{主}.{中}.{次}.{流水}_{說明}"
             echo "   例如: staging_v1.0.0.1_add_feature"
             SHOULD_DEPLOY="false"
@@ -150,34 +150,52 @@ jobs:
     env:
       VERSION: ${{ needs.parse_version.outputs.version }}
     steps:
-      - name: 清理工作目錄（解決 Docker 產生的權限問題）
+      - name: 清理工作目錄（Windows）
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          Write-Host "[Cleanup] Cleaning workspace (Windows)..."
+          $workspace = "${{ github.workspace }}"
+
+          # 刪除 __pycache__ 目錄和 .pyc 檔案
+          if (Test-Path $workspace) {
+            Get-ChildItem -Path $workspace -Recurse -Directory -Filter '__pycache__' -ErrorAction SilentlyContinue |
+              Remove-Item -Recurse -Force -ErrorAction SilentlyContinue
+            Get-ChildItem -Path $workspace -Recurse -File -Filter '*.pyc' -ErrorAction SilentlyContinue |
+              Remove-Item -Force -ErrorAction SilentlyContinue
+          }
+
+          Write-Host "[Cleanup] Done"
+
+      - name: 清理工作目錄（Linux）
+        if: runner.os == 'Linux'
         shell: bash
         run: |
-          echo "🧹 清理工作目錄..."
+          echo "[Cleanup] Cleaning workspace (Linux)..."
           WORKSPACE="${{ github.workspace }}"
-          
+
           # 修復整個工作目錄的權限（包含子目錄）
           if [ -d "$WORKSPACE" ]; then
-            echo "修復目錄權限: $WORKSPACE"
+            echo "Fixing directory permissions: $WORKSPACE"
             sudo chown -R $(whoami):$(id -gn) "$WORKSPACE" || true
             sudo chmod -R u+rwX "$WORKSPACE" || true
           fi
-          
+
           # 也修復上層目錄（actions-runner/_work/repo_name/）
           PARENT_DIR=$(dirname "$WORKSPACE")
           if [ -d "$PARENT_DIR" ]; then
-            echo "修復上層目錄權限: $PARENT_DIR"
+            echo "Fixing parent directory permissions: $PARENT_DIR"
             sudo chown -R $(whoami):$(id -gn) "$PARENT_DIR" || true
             sudo chmod -R u+rwX "$PARENT_DIR" || true
           fi
-          
+
           # 強制刪除 __pycache__ 和 .pyc 檔案
           if [ -d "$WORKSPACE" ]; then
             sudo find "$WORKSPACE" -type d -name '__pycache__' -exec rm -rf {} + 2>/dev/null || true
             sudo find "$WORKSPACE" -type f -name '*.pyc' -delete 2>/dev/null || true
           fi
-          
-          echo "✅ 權限修復完成"
+
+          echo "[Cleanup] Done"
 
       - name: 取得程式碼
         uses: actions/checkout@v4
@@ -206,7 +224,7 @@ jobs:
           STATE_MANAGEMENT_URL=${{ secrets.STAGING_STATE_MANAGEMENT_URL }}
           EOF
 
-          echo "✅ .env 檔案已建立"
+          echo ".env file created"
           chmod 600 .env
 
       - name: 設定映像名稱（轉換為小寫）
@@ -271,7 +289,7 @@ jobs:
           echo "等待 MongoDB 啟動..."
           for i in {1..30}; do
             if docker compose -f core/docker-compose.yml exec -T mongodb mongosh --port ${{ secrets.STAGING_MONGODB_PORT }} --eval "db.adminCommand('ping')" 2>/dev/null; then
-              echo "✅ MongoDB 已就緒"
+              echo "MongoDB is ready"
               break
             fi
             echo "等待中... ($i/30)"
@@ -299,14 +317,29 @@ jobs:
           sleep 10
           curl -f http://localhost:${{ secrets.STAGING_STATE_MANAGEMENT_PORT }}/health
 
-      - name: 清理 Docker 產生的檔案權限（確保下次 CI 可正常運行）
-        if: always()
+      - name: 清理 Docker 產生的檔案權限（Windows）
+        if: always() && runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          Write-Host "[Cleanup] Cleaning file permissions (Windows)..."
+          # Windows 上 Docker 產生的檔案權限問題較少，僅清理快取檔案
+          $workspace = "${{ github.workspace }}"
+          if (Test-Path $workspace) {
+            Get-ChildItem -Path $workspace -Recurse -Directory -Filter '__pycache__' -ErrorAction SilentlyContinue |
+              Remove-Item -Recurse -Force -ErrorAction SilentlyContinue
+            Get-ChildItem -Path $workspace -Recurse -File -Filter '*.pyc' -ErrorAction SilentlyContinue |
+              Remove-Item -Force -ErrorAction SilentlyContinue
+          }
+          Write-Host "[Cleanup] Done"
+
+      - name: 清理 Docker 產生的檔案權限（Linux）
+        if: always() && runner.os == 'Linux'
         shell: bash
         run: |
-          echo "🧹 清理檔案權限..."
+          echo "[Cleanup] Cleaning file permissions (Linux)..."
           sudo chown -R $(whoami):$(id -gn) "${{ github.workspace }}" || true
           sudo chown -R $(whoami):$(id -gn) "$(dirname '${{ github.workspace }}')" || true
-          echo "✅ 權限清理完成"
+          echo "[Cleanup] Done"
 
   deploy_server_production:
     name: 部署到 Server Production
@@ -321,31 +354,31 @@ jobs:
       - name: 清理工作目錄（解決 Docker 產生的權限問題）
         shell: bash
         run: |
-          echo "🧹 清理工作目錄..."
+          echo "[Cleanup] Cleaning workspace..."
           WORKSPACE="${{ github.workspace }}"
-          
+
           # 修復整個工作目錄的權限（包含子目錄）
           if [ -d "$WORKSPACE" ]; then
-            echo "修復目錄權限: $WORKSPACE"
+            echo "Fixing directory permissions: $WORKSPACE"
             sudo chown -R $(whoami):$(id -gn) "$WORKSPACE" || true
             sudo chmod -R u+rwX "$WORKSPACE" || true
           fi
-          
+
           # 也修復上層目錄（actions-runner/_work/repo_name/）
           PARENT_DIR=$(dirname "$WORKSPACE")
           if [ -d "$PARENT_DIR" ]; then
-            echo "修復上層目錄權限: $PARENT_DIR"
+            echo "Fixing parent directory permissions: $PARENT_DIR"
             sudo chown -R $(whoami):$(id -gn) "$PARENT_DIR" || true
             sudo chmod -R u+rwX "$PARENT_DIR" || true
           fi
-          
+
           # 強制刪除 __pycache__ 和 .pyc 檔案
           if [ -d "$WORKSPACE" ]; then
             sudo find "$WORKSPACE" -type d -name '__pycache__' -exec rm -rf {} + 2>/dev/null || true
             sudo find "$WORKSPACE" -type f -name '*.pyc' -delete 2>/dev/null || true
           fi
-          
-          echo "✅ 權限修復完成"
+
+          echo "[Cleanup] Done"
 
       - name: 取得程式碼
         uses: actions/checkout@v4
@@ -374,7 +407,7 @@ jobs:
           STATE_MANAGEMENT_URL=${{ secrets.PRODUCTION_STATE_MANAGEMENT_URL }}
           EOF
 
-          echo "✅ .env 檔案已建立"
+          echo ".env file created"
           chmod 600 .env
 
       - name: 設定映像名稱（轉換為小寫）
@@ -436,20 +469,20 @@ jobs:
       - name: 等待 MongoDB 就緒
         shell: bash
         run: |
-          echo "等待 MongoDB 啟動..."
+          echo "Waiting for MongoDB to start..."
           for i in {1..30}; do
             if docker compose -f core/docker-compose.yml exec -T mongodb mongosh --port ${{ secrets.PRODUCTION_MONGODB_PORT }} --eval "db.adminCommand('ping')" 2>/dev/null; then
-              echo "✅ MongoDB 已就緒"
+              echo "MongoDB is ready"
               break
             fi
-            echo "等待中... ($i/30)"
+            echo "Waiting... ($i/30)"
             sleep 2
           done
 
       - name: 初始化管理員帳號
         shell: bash
         run: |
-          echo "初始化管理員帳號..."
+          echo "Initializing admin account..."
           docker compose -f core/docker-compose.yml exec -T state_management python init_admin.py \
             --username admin \
             --password "${{ secrets.ADMIN_PASSWORD }}" \
@@ -471,10 +504,10 @@ jobs:
         if: always()
         shell: bash
         run: |
-          echo "🧹 清理檔案權限..."
+          echo "[Cleanup] Cleaning file permissions..."
           sudo chown -R $(whoami):$(id -gn) "${{ github.workspace }}" || true
           sudo chown -R $(whoami):$(id -gn) "$(dirname '${{ github.workspace }}')" || true
-          echo "✅ 權限清理完成"
+          echo "[Cleanup] Done"
 
   deploy_edge_production:
     name: 部署到 Edge Production
@@ -489,31 +522,31 @@ jobs:
       - name: 清理工作目錄（解決 Docker 產生的權限問題）
         shell: bash
         run: |
-          echo "🧹 清理工作目錄..."
+          echo "[Cleanup] Cleaning workspace..."
           WORKSPACE="${{ github.workspace }}"
-          
+
           # 修復整個工作目錄的權限（包含子目錄）
           if [ -d "$WORKSPACE" ]; then
-            echo "修復目錄權限: $WORKSPACE"
+            echo "Fixing directory permissions: $WORKSPACE"
             sudo chown -R $(whoami):$(id -gn) "$WORKSPACE" || true
             sudo chmod -R u+rwX "$WORKSPACE" || true
           fi
-          
+
           # 也修復上層目錄（actions-runner/_work/repo_name/）
           PARENT_DIR=$(dirname "$WORKSPACE")
           if [ -d "$PARENT_DIR" ]; then
-            echo "修復上層目錄權限: $PARENT_DIR"
+            echo "Fixing parent directory permissions: $PARENT_DIR"
             sudo chown -R $(whoami):$(id -gn) "$PARENT_DIR" || true
             sudo chmod -R u+rwX "$PARENT_DIR" || true
           fi
-          
+
           # 強制刪除 __pycache__ 和 .pyc 檔案
           if [ -d "$WORKSPACE" ]; then
             sudo find "$WORKSPACE" -type d -name '__pycache__' -exec rm -rf {} + 2>/dev/null || true
             sudo find "$WORKSPACE" -type f -name '*.pyc' -delete 2>/dev/null || true
           fi
-          
-          echo "✅ 權限修復完成"
+
+          echo "[Cleanup] Done"
 
       - name: 取得程式碼
         uses: actions/checkout@v4
@@ -523,26 +556,26 @@ jobs:
         run: |
           cat <<'EOF' > .env
           # Edge Production 環境設定（由 GitHub Actions 自動產生）
-          
+
           # MongoDB 設定
           MONGODB_HOST=${{ secrets.EDGE_MONGODB_HOST }}
           MONGODB_PORT=${{ secrets.EDGE_MONGODB_PORT }}
           MONGODB_USERNAME=${{ secrets.EDGE_MONGODB_USERNAME }}
           MONGODB_PASSWORD=${{ secrets.EDGE_MONGODB_PASSWORD }}
           MONGODB_DATABASE=${{ secrets.EDGE_MONGODB_DATABASE }}
-          
+
           # RabbitMQ 設定
           RABBITMQ_HOST=${{ secrets.EDGE_RABBITMQ_HOST }}
           RABBITMQ_PORT=${{ secrets.EDGE_RABBITMQ_PORT }}
           RABBITMQ_USERNAME=${{ secrets.EDGE_RABBITMQ_USERNAME }}
           RABBITMQ_PASSWORD=${{ secrets.EDGE_RABBITMQ_PASSWORD }}
-          
+
           # State Management 設定
           STATE_MANAGEMENT_PORT=${{ secrets.EDGE_STATE_MANAGEMENT_PORT }}
           STATE_MANAGEMENT_URL=${{ secrets.EDGE_STATE_MANAGEMENT_URL }}
           EOF
-          
-          echo "✅ .env 檔案已建立"
+
+          echo ".env file created"
           chmod 600 .env
 
       - name: 設定映像名稱（轉換為小寫）
@@ -594,7 +627,7 @@ jobs:
         if: always()
         shell: bash
         run: |
-          echo "🧹 清理檔案權限..."
+          echo "[Cleanup] Cleaning file permissions..."
           sudo chown -R $(whoami):$(id -gn) "${{ github.workspace }}" || true
           sudo chown -R $(whoami):$(id -gn) "$(dirname '${{ github.workspace }}')" || true
-          echo "✅ 權限清理完成"
+          echo "[Cleanup] Done"
