--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -150,55 +150,25 @@ jobs:
     env:
       VERSION: ${{ needs.parse_version.outputs.version }}
     steps:
-      - name: 清理工作目錄
-        shell: powershell
-        run: |
-          Write-Host "[Cleanup] Cleaning workspace..."
-          $workspace = "${{ github.workspace }}"
-          if (Test-Path $workspace) {
-            Get-ChildItem -Path $workspace -Recurse -Directory -Filter '__pycache__' -ErrorAction SilentlyContinue |
-              Remove-Item -Recurse -Force -ErrorAction SilentlyContinue
-            Get-ChildItem -Path $workspace -Recurse -File -Filter '*.pyc' -ErrorAction SilentlyContinue |
-              Remove-Item -Force -ErrorAction SilentlyContinue
-          }
-          Write-Host "[Cleanup] Done"
-
       - name: 取得程式碼
         uses: actions/checkout@v4
 
       - name: 建立 .env 檔案
-        shell: powershell
+        shell: cmd
         run: |
-          $envContent = @"
-          # Staging 環境設定（由 GitHub Actions 自動產生）
-
-          # MongoDB 設定
-          MONGODB_HOST=${{ secrets.STAGING_MONGODB_HOST }}
-          MONGODB_PORT=${{ secrets.STAGING_MONGODB_PORT }}
-          MONGODB_USERNAME=${{ secrets.STAGING_MONGODB_USERNAME }}
-          MONGODB_PASSWORD=${{ secrets.STAGING_MONGODB_PASSWORD }}
-          MONGODB_DATABASE=${{ secrets.STAGING_MONGODB_DATABASE }}
-
-          # RabbitMQ 設定
-          RABBITMQ_HOST=${{ secrets.STAGING_RABBITMQ_HOST }}
-          RABBITMQ_PORT=${{ secrets.STAGING_RABBITMQ_PORT }}
-          RABBITMQ_USERNAME=${{ secrets.STAGING_RABBITMQ_USERNAME }}
-          RABBITMQ_PASSWORD=${{ secrets.STAGING_RABBITMQ_PASSWORD }}
-
-          # State Management 設定
-          STATE_MANAGEMENT_PORT=${{ secrets.STAGING_STATE_MANAGEMENT_PORT }}
-          STATE_MANAGEMENT_URL=${{ secrets.STAGING_STATE_MANAGEMENT_URL }}
-          "@
-          $envContent | Out-File -FilePath ".env" -Encoding UTF8
-          Write-Host ".env file created"
-
-      - name: 設定映像名稱
-        id: image_names
-        shell: powershell
-        run: |
-          $ownerLower = "${{ github.repository_owner }}".ToLower()
-          "state_image=ghcr.io/$ownerLower/sound-state-management" | Out-File -FilePath $env:GITHUB_OUTPUT -Append -Encoding UTF8
-          "analysis_image=ghcr.io/$ownerLower/sound-analysis-service" | Out-File -FilePath $env:GITHUB_OUTPUT -Append -Encoding UTF8
+          (
+            echo MONGODB_HOST=${{ secrets.STAGING_MONGODB_HOST }}
+            echo MONGODB_PORT=${{ secrets.STAGING_MONGODB_PORT }}
+            echo MONGODB_USERNAME=${{ secrets.STAGING_MONGODB_USERNAME }}
+            echo MONGODB_PASSWORD=${{ secrets.STAGING_MONGODB_PASSWORD }}
+            echo MONGODB_DATABASE=${{ secrets.STAGING_MONGODB_DATABASE }}
+            echo RABBITMQ_HOST=${{ secrets.STAGING_RABBITMQ_HOST }}
+            echo RABBITMQ_PORT=${{ secrets.STAGING_RABBITMQ_PORT }}
+            echo RABBITMQ_USERNAME=${{ secrets.STAGING_RABBITMQ_USERNAME }}
+            echo RABBITMQ_PASSWORD=${{ secrets.STAGING_RABBITMQ_PASSWORD }}
+            echo STATE_MANAGEMENT_PORT=${{ secrets.STAGING_STATE_MANAGEMENT_PORT }}
+            echo STATE_MANAGEMENT_URL=${{ secrets.STAGING_STATE_MANAGEMENT_URL }}
+          ) > .env
 
       - name: 登入 GHCR
         uses: docker/login-action@v3
@@ -208,118 +178,58 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 拉取映像
-        shell: powershell
+        shell: cmd
         run: |
-          docker pull ${{ steps.image_names.outputs.state_image }}:${{ env.VERSION }}
-          docker pull ${{ steps.image_names.outputs.analysis_image }}:${{ env.VERSION }}
+          docker pull ghcr.io/${{ github.repository_owner }}/sound-state-management:${{ env.VERSION }}
+          docker pull ghcr.io/${{ github.repository_owner }}/sound-analysis-service:${{ env.VERSION }}
 
       - name: 產生部署覆蓋檔
-        shell: powershell
+        shell: cmd
         run: |
-          $overrideContent = @"
-          services:
-            state_management:
-              image: ${{ steps.image_names.outputs.state_image }}:${{ env.VERSION }}
-              command: ["python", "state_management_main.py"]
-            analysis_service:
-              image: ${{ steps.image_names.outputs.analysis_image }}:${{ env.VERSION }}
-              container_name: analysis_service
-              restart: unless-stopped
-              env_file:
-                - ../.env
-              environment:
-                MONGODB_HOST: `${MONGODB_HOST}
-                MONGODB_PORT: `${MONGODB_PORT}
-                MONGODB_USERNAME: `${MONGODB_USERNAME}
-                MONGODB_PASSWORD: `${MONGODB_PASSWORD}
-                MONGODB_DATABASE: `${MONGODB_DATABASE}
-                RABBITMQ_HOST: `${RABBITMQ_HOST}
-                RABBITMQ_PORT: `${RABBITMQ_PORT}
-                STATE_MANAGEMENT_URL: `${STATE_MANAGEMENT_URL}
-              volumes:
-                - ../sub_system/analysis_service/logs:/app/logs
-              depends_on:
-                - mongodb
-                - rabbitmq
-          "@
-          $overrideContent | Out-File -FilePath "core/docker-compose.override.ci.yml" -Encoding UTF8
+          (
+            echo services:
+            echo   state_management:
+            echo     image: ghcr.io/${{ github.repository_owner }}/sound-state-management:${{ env.VERSION }}
+            echo     command: ["python", "state_management_main.py"]
+            echo   analysis_service:
+            echo     image: ghcr.io/${{ github.repository_owner }}/sound-analysis-service:${{ env.VERSION }}
+            echo     container_name: analysis_service
+            echo     restart: unless-stopped
+            echo     env_file:
+            echo       - ../.env
+            echo     environment:
+            echo       MONGODB_HOST: ${MONGODB_HOST}
+            echo       MONGODB_PORT: ${MONGODB_PORT}
+            echo       MONGODB_USERNAME: ${MONGODB_USERNAME}
+            echo       MONGODB_PASSWORD: ${MONGODB_PASSWORD}
+            echo       MONGODB_DATABASE: ${MONGODB_DATABASE}
+            echo       RABBITMQ_HOST: ${RABBITMQ_HOST}
+            echo       RABBITMQ_PORT: ${RABBITMQ_PORT}
+            echo       STATE_MANAGEMENT_URL: ${STATE_MANAGEMENT_URL}
+            echo     volumes:
+            echo       - ../sub_system/analysis_service/logs:/app/logs
+            echo     depends_on:
+            echo       - mongodb
+            echo       - rabbitmq
+          ) > core\docker-compose.override.ci.yml
 
-      - name: 重新部署核心與分析服務
-        shell: powershell
+      - name: 啟動服務
+        shell: cmd
+        run: docker compose -f core/docker-compose.yml -f core/docker-compose.override.ci.yml up -d --remove-orphans mongodb rabbitmq state_management analysis_service
+
+      - name: 等待服務就緒
+        shell: cmd
         run: |
-          docker compose -f core/docker-compose.yml -f core/docker-compose.override.ci.yml up -d --remove-orphans mongodb rabbitmq state_management analysis_service
-
-      - name: 等待 MongoDB 就緒
-        shell: powershell
-        run: |
-          Write-Host "Waiting for MongoDB to start..."
-          $maxRetries = 30
-          $retryCount = 0
-          $ready = $false
-
-          while (-not $ready -and $retryCount -lt $maxRetries) {
-            $retryCount++
-            try {
-              $result = docker compose -f core/docker-compose.yml exec -T mongodb mongosh --port ${{ secrets.STAGING_MONGODB_PORT }} --eval "db.adminCommand('ping')" 2>&1
-              if ($LASTEXITCODE -eq 0) {
-                Write-Host "MongoDB is ready"
-                $ready = $true
-              }
-            } catch { }
-
-            if (-not $ready) {
-              Write-Host "Waiting... ($retryCount/$maxRetries)"
-              Start-Sleep -Seconds 2
-            }
-          }
-
-          if (-not $ready) {
-            Write-Error "MongoDB failed to start within timeout"
-            exit 1
-          }
+          echo Waiting for services to start...
+          timeout /t 30 /nobreak
 
       - name: 初始化管理員帳號
-        shell: powershell
-        run: |
-          Write-Host "Initializing admin account..."
-          docker compose -f core/docker-compose.yml exec -T state_management python init_admin.py --username admin --password "${{ secrets.ADMIN_PASSWORD }}" --email "${{ secrets.ADMIN_EMAIL }}"
-
-      - name: 語法 smoke test
-        shell: powershell
-        run: |
-          docker run --rm ${{ steps.image_names.outputs.state_image }}:${{ env.VERSION }} python -m compileall /app
-          docker run --rm ${{ steps.image_names.outputs.analysis_image }}:${{ env.VERSION }} python -m compileall /app
+        shell: cmd
+        run: docker compose -f core/docker-compose.yml exec -T state_management python init_admin.py --username admin --password "${{ secrets.ADMIN_PASSWORD }}" --email "${{ secrets.ADMIN_EMAIL }}"
 
       - name: 健康檢查
-        shell: powershell
-        run: |
-          Start-Sleep -Seconds 10
-          try {
-            $response = Invoke-WebRequest -Uri "http://localhost:${{ secrets.STAGING_STATE_MANAGEMENT_PORT }}/health" -UseBasicParsing -TimeoutSec 30
-            if ($response.StatusCode -eq 200) {
-              Write-Host "Health check passed"
-            } else {
-              Write-Error "Health check failed with status code: $($response.StatusCode)"
-              exit 1
-            }
-          } catch {
-            Write-Error "Health check failed: $_"
-            exit 1
-          }
-
-      - name: 清理快取檔案
-        if: always()
-        shell: powershell
-        run: |
-          Write-Host "[Cleanup] Cleaning cache files..."
-          $workspace = "${{ github.workspace }}"
-          if (Test-Path $workspace) {
-            Get-ChildItem -Path $workspace -Recurse -Directory -Filter '__pycache__' -ErrorAction SilentlyContinue |
-              Remove-Item -Recurse -Force -ErrorAction SilentlyContinue
-            Get-ChildItem -Path $workspace -Recurse -File -Filter '*.pyc' -ErrorAction SilentlyContinue |
-              Remove-Item -Force -ErrorAction SilentlyContinue
-          }
-          Write-Host "[Cleanup] Done"
+        shell: cmd
+        run: curl -f http://localhost:${{ secrets.STAGING_STATE_MANAGEMENT_PORT }}/health
 
   deploy_server_production:
     name: 部署到 Server Production
